--- a/src/mobile/app/src/main/res/values/strings.xml
+++ b/src/mobile/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Arcus Mobile</string>
     <string name="copyright">Copyright (c) 2025 Tatman Games LLC</string>
     <string name="version">Version 1.0.0</string>
+    <string name="list_files">List Files</string>
+    <string name="placeholder">Placeholder</string>
+    <string name="settings">Settings</string>
 </resources>
